Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -1,6 +1,6 @@
 media: media
-  input: src/media
-  output: /media
+  - input: src/media
+  - output: /media
 content:
   - name: posts
     label: Posts
