--- a/.pages.yml
+++ b/.pages.yml
@@ -7,7 +7,7 @@ content:
     type: collection
     path: '_posts'
     view:
-      fields: [ title, published, date ]
+      fields: [ title, url, icon ]
     fields:
       - name: published
         label: Published
